--- a/style.css
+++ b/style.css
@@ -1,70 +1,149 @@
 html {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-size: 14px;
   font-family: "Helvetica Neue", "Helvetica", Arial, sans;
-  background-color: rgba(26, 31, 24, .8);
+  background-color: rgba(26, 31, 24, 0.8);
   color: #fff;
 }
-*, *:before, *:after {
-  box-sizing: inherit;
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 body {
-    padding: 0;
+  padding: 5rem 0 0;
+  margin: 0;
 }
 
 ul {
-    list-style: none;
-    width: 100%;
-    margin: 0 auto;
-    max-width: 60rem;
+  list-style: none;
+  padding: 0;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 60rem;
 }
 
 .track {
-    display: flex;
-    position: relative;
-    background: rgba(50,50,50,.2);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  background: rgba(50, 50, 50, 0.2);
 }
-.track:not(:last-child) {
-    border-bottom: 1px solid rgba(255,255,255,.8);
-    padding: .4rem 0;
+
+.track :not(:last-child) {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.8);
+  padding: .4rem 0;
 }
+
 .track > * {
-    padding: 0 1.2rem;
+  padding: 0 1.2rem;
 }
+
 .track .time {
-    width: 5rem;
+  width: 5rem;
 }
+
 .track .title,
 .track .artist {
-    flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .button {
-    display: block;
-    height: 50px;
-    width: 50px;
-    background-size: 2rem;
-    filter: invert(1);
-    background-position: center;
-    background-repeat: no-repeat;
+  display: block;
+  height: 50px;
+  width: 50px;
+  background-size: 2rem;
+  -webkit-filter: invert(1);
+          filter: invert(1);
+  background-position: center;
+  background-repeat: no-repeat;
 }
+
 .button.play {
-    background-image: url(https://ionicons.com/ionicons/svg/ios-play.svg);
+  background-image: url(https://ionicons.com/ionicons/svg/ios-play.svg);
 }
+
 .button.pause {
-    background-image: url(https://ionicons.com/ionicons/svg/ios-pause.svg);
+  background-image: url(https://ionicons.com/ionicons/svg/ios-pause.svg);
 }
 
 input {
-    width: 100%;
-    border: 0;
-    border-radius: 1rem;
-    height: 2rem;
-    padding: .2rem .6rem;
+  width: 100%;
+  border: 0;
+  border-radius: 1rem;
+  height: 2rem;
+  padding: .2rem .6rem;
 }
+
 input[type='search'] {
-    background: url(https://ionicons.com/ionicons/svg/ios-search.svg) .4rem center no-repeat white;
-    background-size: 1.4rem;
-    padding-left: 2rem;
+  background: url(https://ionicons.com/ionicons/svg/ios-search.svg) 0.4rem center no-repeat white;
+  background-size: 1.4rem;
+  padding-left: 2rem;
+  z-index: 2;
 }
+
+.search {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 0;
+  padding: .6rem;
+  z-index: 1;
+  text-align: center;
+  -webkit-transition: background-color .2s ease-out;
+  transition: background-color .2s ease-out;
+}
+
+.search:focus, .search:hover {
+  background-color: rgba(17, 17, 17, 0.9);
+}
+
+.search > * {
+  width: 100%;
+  max-width: 60rem;
+  text-align: left;
+}
+
+.datalist {
+  overflow: auto;
+  z-index: 1;
+  margin: 0 auto;
+  color: #fff;
+  padding: .6rem .6rem .6rem 2rem;
+  -webkit-transition: padding .2s ease-out, height .2s ease-out, border-width .2s ease-out;
+  transition: padding .2s ease-out, height .2s ease-out, border-width .2s ease-out;
+}
+
+.datalist:empty {
+  padding-top: 0;
+  padding-bottom: 0;
+  height: 0;
+  border-width: 0;
+}
+
+.datalist,
+.datalist ol {
+  list-style: none;
+}
+
+.datalist ol {
+  padding: 0;
+}
+
+.datalist li > a {
+  display: block;
+  padding: .4rem 0;
+}
+
+.datalist li:not(:last-child) > a {
+  border-bottom: 1px solid rgba(17, 17, 17, 0.2);
+}
+/*# sourceMappingURL=style.css.map */
