--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ html {
           box-sizing: inherit;
 }
 
+*:focus {
+  outline-color: transparent;
+  outline-style: none;
+}
+
 body {
   padding: 5rem 0 0;
   margin: 0;
@@ -147,6 +152,8 @@ input[type='search'] {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: inherit;
+  text-decoration: none;
 }
 
 .datalist li > a > span {
