--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,10 @@ html {
 *:after {
     box-sizing: inherit;
 }
+*:focus {
+    outline-color: transparent;
+    outline-style: none;
+}
 
 body {
     padding: 5rem 0 0;
@@ -130,6 +134,8 @@ input {
             display: flex;
             padding: .4rem 0;
             align-items: center;
+            color: inherit;
+            text-decoration: none;
             > span {
                 padding: 0 5%;
             }
